part4/4.02/kube/manifests/todo-api.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-api-svc
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-api
  labels: { app: todo-api }
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
        - name: todo-api
          image: TODO_API/IMAGE
          resources:
            limits:
              cpu: "150m"
              memory: "128Mi"
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3001
