part4/4.02/kube/manifests/todo-app.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: picture-cache
          persistentVolumeClaim:
            claimName: picture-cache-claim
      containers:
        - name: todo-app
          image: TODO_APP/IMAGE
          volumeMounts:
            - name: picture-cache
              mountPath: /usr/src/app/cache
          resources:
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
